<resources>
    <string name="app_name">Ёш бухгалтер</string>
    <string name="active">Актив счетлар</string>
    <string name="passive">Пассив счетлар</string>
    <string name="transit">Транзит счетлар</string>
    <string name="zabalans">Балансдан ташқари счетлар</string>
    <string name="zakon">Қонунлар</string>
    <string name="nsbu">Қўшимча</string>
    <string name="lang_uz_l">O`zb</string>
    <string name="lang_uz_k">Узб</string>
    <string name="lang_ru">Рус</string>
    <string name="active_1">Узоқ муддатли активлар</string>
    <string name="active_raz_1">I БЎЛИМ. АСОСИЙ ВОСИТАЛАР, НОМОДДИЙ ВА БОШҚА УЗОҚ МУДДАТЛИ АКТИВЛАР</string>
    <string name="active_0100">0100 АСОСИЙ ВОСИТАЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_0110">0110 Ер</string>
    <string name="active_0111">0111 Ерни ободонлаштириш</string>
    <string name="active_0112">0112 Узоқ муддатли ижара шартномаси бўйича олинган асосий воситаларни ободонлаштириш
    </string>
    <string name="active_0120">0120 Бинолар, иншоотлар ва узатувчи мосламалар</string>
    <string name="active_0130">0130 Машина ва асбоб-ускуналар</string>
    <string name="active_0140">0140 Мебель ва офис жиҳозлари</string>
    <string name="active_0150">0150 Компьютер жиҳозлари ва ҳисоблаш техникаси</string>
    <string name="active_0160">0160 Транспорт воситалари</string>
    <string name="active_0170">0170 Ишчи ва маҳсулдор ҳайвонлар</string>
    <string name="active_0180">0180 Кўп йиллик ўсимликлар</string>
    <string name="active_0190">0190 Бошқа асосий воситалар</string>
    <string name="active_0199">0199 Консервация қилинган асосий воситалар</string>
    <string name="active_0200">0200 АСОСИЙ ВОСИТАЛАРНИНГ ЭСКИРИШИНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_0211">0211 Ерни ободонлаштиришнинг эскириши</string>
    <string name="active_0212">0212 Узоқ муддатли ижара шартномаси бўйича олинган асосий воситаларни ободонлаштиришнинг
        эскириши
    </string>
    <string name="active_0220">0220 Бино, иншоотлар ва узатувчи мосламаларнинг эскириши</string>
    <string name="active_0230">0230 Машина ва асбоб-ускуналарнинг эскириши</string>
    <string name="active_0240">0240 Мебель ва офис жиҳозларининг эскириши</string>
    <string name="active_0250">0250 Компьютер жиҳозлари ва ҳисоблаш техникасининг эскириши</string>
    <string name="active_0260">0260 Транспорт воситаларининг эскириши</string>
    <string name="active_0270">0270 Ишчи ҳайвонларнинг эскириши</string>
    <string name="active_0280">0280 Кўп йиллик ўсимликларнинг эскириши</string>
    <string name="active_0290">0290 Бошқа асосий воситаларнинг эскириши</string>
    <string name="active_0299">0299 Узоқ муддатли ижара шартномаси бўйича олинган асосий воситаларнинг эскириши</string>
    <string name="active_0300">0300 УЗОҚ МУДДАТЛИ ИЖАРА ШАРТНОМАСИ БЎЙИЧА ОЛИНГАН АСОСИЙ ВОСИТАЛАРНИ ҲИСОБГА ОЛУВЧИ
        СЧЁТЛАР
    </string>
    <string name="active_0310">0310 Узоқ муддатли ижара шартномаси бўйича олинган асосий воситалар</string>
    <string name="active_0400">0400 НОМОДДИЙ АКТИВЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_0410">0410 Патентлар, лицензиялар ва ноу-хау</string>
    <string name="active_0420">0420 Савдо маркалари, товар белгилари ва саноат намуналари</string>
    <string name="active_0430">0430 Дастурий таъминот</string>
    <string name="active_0440">0440 Ер ва табиат ресурсларидан фойдаланиш ҳуқуқлари</string>
    <string name="active_0450">0450 Ташкилий харажатлар</string>
    <string name="active_0460">0460 Франчайз</string>
    <string name="active_0470">0470 Муаллифлик ҳуқуқлари</string>
    <string name="active_0480">0480 Гудвилл</string>
    <string name="active_0490">0490 Бошқа номоддий активлар</string>
    <string name="active_0500">0500 НОМОДДИЙ АКТИВЛАР АМОРТИЗАЦИЯСИНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_0510">0510 Патентлар, лицензиялар ва ноу-хаунинг амортизацияси</string>
    <string name="active_0520">0520 Савдо маркалари, товар белгилари ва саноат намуналарининг амортизацияси</string>
    <string name="active_0530">0530 Дастурий таъминотнинг амортизацияси</string>
    <string name="active_0540">0540 Ер ва табиат ресурсларидан фойдаланиш ҳуқуқларининг амортизацияси</string>
    <string name="active_0550">0550 Ташкилий харажатларнинг амортизацияси</string>
    <string name="active_0560">0560 Франчайзнинг амортизацияси</string>
    <string name="active_0570">0570 Муаллифлик ҳуқуқларининг амортизацияси</string>
    <string name="active_0590">0590 Бошқа номоддий активларнинг амортизацияси</string>
    <string name="active_0600">0600 УЗОҚ МУДДАТЛИ ИНВЕСТИЦИЯЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_0610">0610 Қимматли қоғозлар</string>
    <string name="active_0620">0620 Шуъба хўжалик жамиятларига инвестициялар</string>
    <string name="active_0630">0630 Қарам хўжалик жамиятларига инвестициялар</string>
    <string name="active_0640">0640 Чет эл капитали мавжуд бўлган корхоналарга инвестициялар</string>
    <string name="active_0690">0690 Бошқа узоқ муддатли инвестициялар</string>
    <string name="active_0700">0700 ЎРНАТИЛАДИГАН АСБОБ-УСКУНАЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_0710">0710 Ўрнатиладиган асбоб-ускуналар - маҳаллий</string>
    <string name="active_0720">0720 Ўрнатиладиган асбоб-ускуналар - хорижий</string>
    <string name="active_0800">0800 КАПИТАЛ ҚЎЙИЛМАЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_0810">0810 Тугалланмаган қурилиш</string>
    <string name="active_0820">0820 Асосий воситаларни харид қилиш</string>
    <string name="active_0830">0830 Номоддий активларни харид қилиш</string>
    <string name="active_0840">0840 Асосий подани ташкил қилиш</string>
    <string name="active_0850">0850 Ерни ободонлаштиришга капитал қўйилмалар</string>
    <string name="active_0860">0860 Узоқ муддатли ижара шартномаси бўйича олинган асосий воситаларга капитал
        қўйилмалар
    </string>
    <string name="active_0890">0890 Бошқа капитал қўйилмалар</string>
    <string name="active_0900">0900 УЗОҚ МУДДАТЛИ ДЕБИТОР ҚАРЗЛАРИ ВА КЕЧИКТИРИЛГАН ХАРАЖАТЛАРНИ ҲИСОБГА ОЛУВЧИ
        СЧЁТЛАР
    </string>
    <string name="active_0910">0910 Олинган векселлар</string>
    <string name="active_0920">0920 Узоқ муддатли ижара бўйича олинадиган тўловлар</string>
    <string name="active_0930">0930 Ходимларнинг узоқ муддатли қарзлари</string>
    <string name="active_0940">0940 Бошқа узоқ муддатли дебитор қарзлар</string>
    <string name="active_0950">0950 Вақтинчалик фарқлар бўйича кечиктирилган даромад (фойда) солиғи</string>
    <string name="active_0960">0960 Дисконт (чегирма)лар бўйича узоқ муддатли кечиктирилган харажатлар</string>
    <string name="active_0990">0990 Бошқа узоқ муддатли кечиктирилган харажатлар</string>
    <string name="active_2">Жорий активлар</string>
    <string name="active_raz_2">II БЎЛИМ. ТОВАР-МОДДИЙ ЗАХИРАЛАРИ</string>
    <string name="active_1000">1000 МАТЕРИАЛЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_1010">1010 Хом ашё ва материаллар</string>
    <string name="active_1020">1020 Сотиб олинган ярим тайёр маҳсулотлар ва бутловчи буюмлар</string>
    <string name="active_1030">1030 Ёқилғилар</string>
    <string name="active_1040">1040 Эҳтиёт қисмлар</string>
    <string name="active_1050">1050 Қурилиш материаллари</string>
    <string name="active_1060">1060 Идиш ва идишбоп материаллар</string>
    <string name="active_1070">1070 Четга қайта ишлаш учун берилган материаллар</string>
    <string name="active_1080">1080 Инвентарь ва хўжалик жиҳозлари</string>
    <string name="active_1090">1090 Бошқа материаллар</string>
    <string name="active_1100">1100 ЎСТИРИШДАГИ ВА БОҚУВДАГИ ҲАЙВОНЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_1110">1110 Ўстиришдаги ҳайвонлар</string>
    <string name="active_1120">1120 Бўрдоқидаги ҳайвонлар</string>
    <string name="active_1200">1200</string>
    <string name="active_1300">1300</string>
    <string name="active_1400">1400</string>
    <string name="active_1500">1500 МАТЕРИАЛЛАРНИ ТАЙЁРЛАШ ВА ХАРИД ҚИЛИШНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_1510">1510 Материалларни тайёрлаш ва харид қилиш</string>
    <string name="active_1600">1600 МАТЕРИАЛЛАР ҚИЙМАТИДАГИ ФАРҚЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_1610">1610 Материаллар қийматидаги фарқлар</string>
    <string name="active_1700">1700</string>
    <string name="active_1800">1800</string>
    <string name="active_1900">1900</string>
    <string name="active_2000">2000 АСОСИЙ ИШЛАБ ЧИҚАРИШНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_2010">2010 Асосий ишлаб чиқариш</string>
    <string name="active_2100">2100 ЎЗИДА ИШЛАБ ЧИҚАРИЛГАН ЯРИМ ТАЙЁР МАҲСУЛОТЛАРНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_2110">2110 Ўзида ишлаб чиқарилган ярим тайёр маҳсулотлар</string>
    <string name="active_2200">2200</string>
    <string name="active_2300">2300 ЁРДАМЧИ ИШЛАБ ЧИҚАРИШНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_2310">2310 Ёрдамчи ишлаб чиқариш</string>
    <string name="active_2400">2400</string>
    <string name="active_2500">2500 УМУМИШЛАБ ЧИҚАРИШ ХАРАЖАТЛАРИНИ ҲИСОБГА ОЛУВЧИ СЧЁТЛАР</string>
    <string name="active_2510">2510 Умумишлаб чиқариш харажатлари</string>
    <string name="action_personal">Шахсий маълумотлар</string>
    <string name="action_setting">Созламалар</string>
    <string name="action_about">Дастур хакида</string>
    <string name="action_dialog">Тилни танланг</string>
    <string name="menu_home">Бош сахифа</string>
    <string name="menu_lang">Тилни ўзгартириш</string>
    <string name="menu_share">Бўлишиш</string>
    <string name="menu_rate">Бизни бахоланг</string>
    <string name="menu_about">Биз хақимизда</string>
    <string name="menu_other">Бошқа маҳсулот</string>
    <string name="name_kompany">Moliya studiyasi</string>
    <string name="adress_kompany">Молия студияси биноси</string>
    <string name="say_kompany">“Moliya studiyasi” – бухгалтерия ҳисобини ўргатишга ва шу билан биргаликда бухгалтерия
        хизматларини амалга оширишга
        ихтисослашган ўқув муассасаси. Ўқув курсимизда сиз 4 ой мобайнида бухгалтерияни 0 дан бошлаб балансга қадар
        ўрганиш имкониятини қўлга киритасиз.
        Дарсимиз ҳафтасига 3 маротаба 2 ярим соатдан бўлиб ўтади. Курс давомида 1С 8.3 дастурида қийинчиликсиз ишлай
        оладиган етук кадр бўлиб,
        ўқиш сўнгида диплом ҳамда мукаммал иш ўрнига эга бўласиз. Бундан ташқари курс давомида сизга солиқ ҳисоботлари,
        банк клиент иш давомида
        керак бўладиган вазифалар ўргатиб борилади. Агарда сиз якка тартибдаги дарсларни хоҳласангиз бизда бу имконият
        ҳам мавжуд.
    </string>
    <string name="say_kompany1">4 ой давомида сиз:</string>
    <string name="say_kompany2">- Бухгалтерия ҳисоби фани;</string>
    <string name="say_kompany3">- Корхона қай тартибда очилиши ва ҳужжатларнинг қай тартибда расмийлаштирилиши;</string>
    <string name="say_kompany4">- Корхона ишининг қандай тартибда амалга оширилиши;</string>
    <string name="say_kompany5">- Шартномалар;</string>
    <string name="say_kompany6">- Ҳисоб фактуралар;</string>
    <string name="say_kompany7">- Икки ёқламали ёзув бўйича бухгалтерия ҳисобини юритиш;</string>
    <string name="say_kompany8">- Давлат солиқ инспекциясига топширилиши лозим бўлган солиқлар;</string>
    <string name="say_kompany9">- Барча турдаги корхоналарнинг ойлик, чорак ва йиллик ҳисоботларини ҳисоблаш;</string>
    <string name="say_kompany10">- Банк клиент, випискалар ва уларни қай тартибда киритилиши каби билим ва кўникмаларга
        эга бўласиз ҳамда кусрни тамомлаганингиздан сўнг
        ўқитувчиларимиз билан биргаликда амалиёт ҳам ўташингиз мумкин.
    </string>
    <string name="adress_kompany_text">Тошкент шаҳри, Юнусобод тумани, Шароф Рашидов кўчаси 16-уй</string>
</resources>