<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
          android:orderInCategory="1"
          android:title="@string/action_home"
          app:showAsAction="never"/>
    <item android:id="@+id/action_personal"
          android:orderInCategory="1"
          android:title="@string/action_personal"
          app:showAsAction="never"/>
    <item android:id="@+id/action_setting"
          android:orderInCategory="1"
          android:title="@string/action_setting"
          app:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:orderInCategory="1"
          android:title="@string/action_about"
          app:showAsAction="never"/>
</menu>