<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="financialStudio.young_accountant.ui.home.HomeFragment"
            android:label=""
            tools:layout="@layout/home_fragment">
    </fragment>

    <dialog
            android:id="@+id/nav_lang"
            android:name="financialStudio.young_accountant.DialogLang"
            android:label="@string/menu_lang"
            tools:layout="@layout/dialog_language">
    </dialog>

    <fragment
            android:id="@+id/nav_about"
            android:name="financialStudio.young_accountant.ui.about.AboutFragment"
            android:label="@string/menu_about"
            tools:layout="@layout/about_fragment">
    </fragment>

    <fragment
            android:id="@+id/nav_other"
            android:name="financialStudio.young_accountant.ui.other.OtherFragment"
            android:label="@string/menu_other"
            tools:layout="@layout/other_fragment">
    </fragment>

</navigation>