<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorfon"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_krest"
                android:background="@android:color/transparent"
                android:id="@+id/imgbtnclose"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

        <TextView
                android:text="@string/action_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>
    </RelativeLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="15dp">
        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <Button
                    android:text="@string/lang_uz_l"
                    android:id="@+id/btn_uz_l"
                    style="@style/buttonlangnormal"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <Button
                    android:text="@string/lang_ru"
                    android:id="@+id/btn_ru"
                    style="@style/buttonlangnormal"/>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <Button
                    android:text="@string/lang_uz_k"
                    android:id="@+id/btn_uz_k"
                    style="@style/buttonlangnormal"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
